chore: merge workflows onto one (#982)
* chore: merge workflows

Signed-off-by: Stephane Bouchet <sbouchet@redhat.com>