@@ -30,7 +30,7 @@ import io.fabric8.openshift.client.dsl.ProjectOperation;
 import java.io.IOException;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
@@ -57,7 +57,7 @@ public class OdoKubernetesClientTest {
   @Before
   public void before() throws MalformedURLException {
     this.kubernetesClient = mock(KubernetesClient.class);
-    doReturn(new URL("https://localhost"))
+    doReturn(URI.create("https://localhost").toURL())
       .when(kubernetesClient).getMasterUrl();
     this.openShiftClient = mock(OpenShiftClient.class);
     this.odo = createOdo(kubernetesClient, openShiftClient);
